--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="apple-mobile-web-app-title" content="Better Menu">
+    <meta name="application-name" content="Better Menu">
     <link rel="icon" href="BM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
