--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,15 @@
     <meta name="apple-mobile-web-app-title" content="Better Menu">
     <meta name="application-name" content="Better Menu">
     <link rel="icon" href="BM.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="theme-color" content="#2D3748" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4FD1C5"> 
     <meta
       name="description"
       content="A web app that helps you filter out menu items that do not fit your dietary and/or nutritional needs."
     />
     <link rel="apple-touch-icon" href="BM.png" />
+    <link rel="apple-touch-startup-image" href="launch.gif">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
