--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       content="A web app that helps you filter out menu items that do not fit your dietary and/or nutritional needs."
     />
     <link rel="apple-touch-icon" href="BM.png" />
-    <link rel="apple-touch-startup-image" href="launch.gif">
+    <link rel="apple-touch-startup-image" href="launch.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
