--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-90M235R3Y7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-90M235R3Y7');
+    </script>
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-title" content="Better Menu">
     <meta name="application-name" content="Better Menu">
